--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,102 +223,115 @@ add_library(Boost::boost ALIAS boost_header)
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_atomic_static STATIC ${BOOST_ATOMIC_SRC})
-else()
-add_library(boost_atomic_static SHARED ${BOOST_ATOMIC_SRC})
-endif()
 add_library(Boost::atomic ALIAS boost_atomic_static)
+else()
+add_library(boost_atomic_dll SHARED ${BOOST_ATOMIC_SRC})
+add_library(Boost::atomic ALIAS boost_atomic_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_system_static STATIC ${BOOST_SYSTEM_SRC})
-else()
-add_library(boost_system_static SHARED ${BOOST_SYSTEM_SRC})
-endif()
 add_library(Boost::system ALIAS boost_system_static)
+else()
+add_library(boost_system_dll SHARED ${BOOST_SYSTEM_SRC})
+add_library(Boost::system ALIAS boost_system_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_thread_static STATIC ${BOOST_THREAD_SRC})
-else()
-add_library(boost_thread_static SHARED ${BOOST_THREAD_SRC})
-endif()
 add_library(Boost::thread ALIAS boost_thread_static)
+else()
+add_library(boost_thread_dll SHARED ${BOOST_THREAD_SRC})
+add_library(Boost::thread ALIAS boost_thread_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_context_static STATIC ${BOOST_CONTEXT_SRC})
-else()
-add_library(boost_context_static SHARED ${BOOST_CONTEXT_SRC})
-endif()
 add_library(Boost::context ALIAS boost_context_static)
+else()
+add_library(boost_context_dll SHARED ${BOOST_CONTEXT_SRC})
+add_library(Boost::context ALIAS boost_context_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_coroutine_static STATIC ${BOOST_COROUTINE_SRC})
-else()
-add_library(boost_coroutine_static SHARED ${BOOST_COROUTINE_SRC})
-endif()
 add_library(Boost::coroutine ALIAS boost_coroutine_static)
+else()
+add_library(boost_coroutine_dll SHARED ${BOOST_COROUTINE_SRC})
+add_library(Boost::coroutine ALIAS boost_coroutine_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_chrono_static STATIC ${BOOST_CHRONO_SRC})
-else()
-add_library(boost_chrono_static SHARED ${BOOST_CHRONO_SRC})
-endif()
 add_library(Boost::chrono ALIAS boost_chrono_static)
+else()
+add_library(boost_chrono_dll SHARED ${BOOST_CHRONO_SRC})
+add_library(Boost::chrono ALIAS boost_chrono_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_filesystem_static STATIC ${BOOST_FILESYSTEM_SRC})
-else()
-add_library(boost_filesystem_static SHARED ${BOOST_FILESYSTEM_SRC})
-endif()
 add_library(Boost::filesystem ALIAS boost_filesystem_static)
+else()
+add_library(boost_filesystem_dll SHARED ${BOOST_FILESYSTEM_SRC})
+add_library(Boost::filesystem ALIAS boost_filesystem_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_locale_static STATIC ${BOOST_LOCALE_SRC})
-else()
-add_library(boost_locale_static SHARED ${BOOST_LOCALE_SRC})
-endif()
 add_library(Boost::locale ALIAS boost_locale_static)
+else()
+add_library(boost_locale_dll SHARED ${BOOST_LOCALE_SRC})
+add_library(Boost::locale ALIAS boost_locale_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_date_time_static STATIC ${BOOST_DATE_TIME_SRC})
-else()
-add_library(boost_date_time_static SHARED ${BOOST_DATE_TIME_SRC})
-endif()
 add_library(Boost::date_time ALIAS boost_date_time_static)
+else()
+add_library(boost_date_time_dll SHARED ${BOOST_DATE_TIME_SRC})
+add_library(Boost::date_time ALIAS boost_date_time_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_regex_static STATIC ${BOOST_REGEX_SRC})
-else()
-add_library(boost_regex_static SHARED ${BOOST_REGEX_SRC})
-endif()
 add_library(Boost::regex ALIAS boost_regex_static)
+else()
+add_library(boost_regex_dll SHARED ${BOOST_REGEX_SRC})
+add_library(Boost::regex ALIAS boost_regex_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_timer_static STATIC ${BOOST_TIMER_SRC})
-else()
-add_library(boost_timer_static SHARED ${BOOST_TIMER_SRC})
-endif()
 add_library(Boost::timer ALIAS boost_timer_static)
+else()
+add_library(boost_timer_dll SHARED ${BOOST_TIMER_SRC})
+add_library(Boost::timer ALIAS boost_timer_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_exception_static STATIC ${BOOST_EXCEPTION_SRC})
-else()
-add_library(boost_exception_static SHARED ${BOOST_EXCEPTION_SRC})
-endif()
 add_library(Boost::exception ALIAS boost_exception_static)
-
+else()
+add_library(boost_exception_dll SHARED ${BOOST_EXCEPTION_SRC})
+add_library(Boost::exception ALIAS boost_exception_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_random_static STATIC ${BOOST_RANDOM_SRC})
-else()
-add_library(boost_random_static SHARED ${BOOST_RANDOM_SRC})
-endif()
 add_library(Boost::random ALIAS boost_random_static)
+else()
+add_library(boost_random_dll SHARED ${BOOST_RANDOM_SRC})
+add_library(Boost::random ALIAS boost_random_dll)
+endif()
 
 if(Boost_USE_STATIC_LIBS)
 add_library(boost_program_options_static STATIC ${BOOST_PROGRAM_OPTIONS_SRC} )
-else()
-add_library(boost_program_options_static SHARED ${BOOST_PROGRAM_OPTIONS_SRC})
-endif()
 add_library(Boost::program_options ALIAS boost_program_options_static)
+else()
+add_library(boost_program_options_dll SHARED ${BOOST_PROGRAM_OPTIONS_SRC})
+add_library(Boost::program_options ALIAS boost_program_options_dll)
+endif()
 
 target_include_directories(boost_header INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -327,6 +340,7 @@ target_compile_definitions(boost_thread_static PRIVATE -DBOOST_THREAD_BUILD_LIB)
 target_compile_definitions(boost_context_static PUBLIC -DBOOST_ALL_NO_LIB -DBOOST_ALL_STATIC_LINK)
 target_compile_definitions(boost_context_static PRIVATE -DBOOST_CONTEXT_EXPORT)
 
+if(Boost_USE_STATIC_LIBS)
 target_link_libraries(boost_system_static boost_header)
 target_link_libraries(boost_atomic_static boost_system_static boost_header)
 target_link_libraries(boost_filesystem_static boost_system_static boost_header)
@@ -341,6 +355,22 @@ target_link_libraries(boost_timer_static boost_system_static boost_chrono_static
 target_link_libraries(boost_exception_static boost_system_static boost_header)
 target_link_libraries(boost_random_static boost_system_static boost_header)
 target_link_libraries(boost_program_options_static boost_filesystem_static boost_system_static boost_header)
+else()
+target_link_libraries(boost_system_dll boost_header)
+target_link_libraries(boost_atomic_dll boost_system_static boost_header)
+target_link_libraries(boost_filesystem_dll boost_system_static boost_header)
+target_link_libraries(boost_thread_dll boost_system_static boost_header Threads::Threads)
+target_link_libraries(boost_context_dll boost_header)
+target_link_libraries(boost_coroutine_dll boost_context_static boost_system_static boost_header)
+target_link_libraries(boost_chrono_dll boost_system_static boost_header)
+target_link_libraries(boost_locale_dll boost_system_static boost_header)
+target_link_libraries(boost_date_time_dll boost_system_static boost_chrono_static boost_header)
+target_link_libraries(boost_regex_dll boost_system_static boost_header)
+target_link_libraries(boost_timer_dll boost_system_static boost_chrono_static boost_header)
+target_link_libraries(boost_exception_dll boost_system_static boost_header)
+target_link_libraries(boost_random_dll boost_system_static boost_header)
+target_link_libraries(boost_program_options_dll boost_filesystem_static boost_system_static boost_header)
+endif()
 
 if(WIN32)
 	target_compile_definitions(boost_header INTERFACE -DWIN32_LEAN_AND_MEAN -DNOMINMAX)
@@ -365,9 +395,10 @@ set(BOOST_LIBRARIES
 	Boost::thread
 	Boost::random
 	Boost::program_options
-	# boost_locale_static
+	Boost::locale
 PARENT_SCOPE)
 
+if(Boost_USE_STATIC_LIBS)
 set_target_properties(boost_system_static PROPERTIES FOLDER "third_party/boost")
 set_target_properties(boost_atomic_static PROPERTIES FOLDER "third_party/boost")
 set_target_properties(boost_filesystem_static PROPERTIES FOLDER "third_party/boost")
@@ -382,3 +413,19 @@ set_target_properties(boost_timer_static PROPERTIES FOLDER "third_party/boost")
 set_target_properties(boost_exception_static PROPERTIES FOLDER "third_party/boost")
 set_target_properties(boost_random_static PROPERTIES FOLDER "third_party/boost")
 set_target_properties(boost_program_options_static PROPERTIES FOLDER "third_party/boost")
+else()
+set_target_properties(boost_system_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_atomic_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_filesystem_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_thread_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_context_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_coroutine_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_chrono_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_locale_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_date_time_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_regex_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_timer_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_exception_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_random_dll PROPERTIES FOLDER "third_party/boost")
+set_target_properties(boost_program_options_dll PROPERTIES FOLDER "third_party/boost")
+endif()
